# tapioca

./: .gitignore  .ocamlformat  Cargo.toml  README.md  dune-project  flake.nix  insta.yaml  tapioca.opam
example/: float.ss  hello.ss  sized-numberic.ss  string-operations.ss  writeln.ss
lib/: dune
lib/enotation/: Combinator.ml  ENotation.ml  LexReporter.ml  Lexer.ml  Lexer.mll  Parser.ml  dune
lib/expander/: Ast.ml  Chez.ml  Context.ml  Core.ml  Env.ml  Expander.ml  Reporter.ml  Term.ml  Tyck.ml  TypeCheck.ml  dune
runtime/: Makefile  numberic-extension.c  prelude.ss  prelude.sts  profile.ss  u8.c  u8.ss
src/: ast.rs  error.rs  expander.rs  main.rs
src/ast/: expr.rs  mod.rs  typ.rs
src/backend/: chez.rs  mod.rs  tinyc.rs
src/expander/: README.md  mod.rs  scope.rs  tests.rs
src/expander/matcher/: mod.rs  tests.rs
src/matcher/: mod.rs  tests.rs
src/middle/: closure_conversion.rs  ir.rs  mod.rs
src/type_system/: environment.rs  mod.rs
test/: dune
